--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               type="password"
               placeholder="password"
             />
-            <button class="btn btn-outline-light btn-sm  ">
+            <button class="btn btn-outline-light btn-sm login__btn">
               <i class="bi bi-box-arrow-in-right text-dark h4"></i>
             </button>
           </form>
