--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     <input
                       class="form-control fw-bold bg-danger-subtle"
                       type="number"
-                      placeholder="Confirm PIN6"
+                      placeholder="Confirm PIN"
                     />
                     <button class="btn btn-danger p-1">
                       <i class="bi bi-arrow-right-circle h4 text-dark"></i>
