--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- MohammadReza Nadirkhanloo -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -7,6 +8,8 @@
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="icon/bootstrap-icons.min.css" />
+    <link rel="icon" type="image/png" href="image/bootstrap-logo.png">
+    <meta name="description" content="">
   </head>
   <body>
     <header>
@@ -150,7 +153,19 @@
               </div>
             </div>
           </div>
-          <div class="col-12 order-3">t</div>
+          <div class="col-12 order-3">
+            <div class="d-flex align-items-center justify-content-between">
+              <div class="d-flex align-items-center fw-bold text-secondary gap-4">
+                <p>IN <span class="text-success fs-3 summary_value">0000€</span></p>
+                <p>OUT <span class="text-danger fs-3">0000€</span></p>
+                <p>INTEREST <span class="text-success fs-3">0000€</span></p>
+                <button class="btn btn-light fw-bold">SORT<i class="bi bi-arrow-down-up"></i></button>
+              </div>
+              <div class="fw-bold text-secondary">
+                <p>You will be logged out in <span class="text-dark fs-5">05:00</span></p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </main>
