--- a/index.html
+++ b/index.html
@@ -166,10 +166,10 @@
                     </p>
                   </div>
                   <div class="col-sm-3 col-6">
-                    <p>OUT <span class="text-danger fs-3">0000€</span></p>
+                    <p>OUT <span class="text-danger fs-3 sumOut">0000€</span></p>
                   </div>
                   <div class="col-sm-3 col-6">
-                    <p>INTEREST <span class="text-success fs-3">0000€</span></p>
+                    <p>INTEREST <span class="text-success fs-3 sumINTEREST">0000€</span></p>
                   </div>
                   <div class="col-sm-3 col-6">
                     <button class="btn btn-light fw-bold shadow-sm">
