--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         </div>
       </nav>
     </header>
-    <main class="app mt-2 min-vh-100 d-flex align-items-center">
-      <div class="container">
+    <main class="app mt-5">
+      <div class="container ">
         <div class="row g-4">
           <div class="col-12">
             <div class="d-flex justify-content-between align-items-center">
@@ -191,7 +191,7 @@
         </div>
       </div>
     </main>
-    <footer class="d-flex justify-content-center p-3 border-top ">
+    <footer class="d-flex justify-content-center p-3 border-top rounded-1 shadow-sm">
       <ul class="nav list-unstyled">
         <li class="ms-3">
           <a class="text-body-secondary" href="https://t.me/+989222032902"
