--- a/index.html
+++ b/index.html
@@ -28,11 +28,16 @@
               class="form-control me-2 text-center rounded-pill login_user"
               type="text"
               placeholder="user"
+              autofocus
+              maxlength="3"
+              required
             />
             <input
               class="form-control me-2 text-center rounded-pill login_pass"
               type="password"
               placeholder="password"
+              required
+              maxlength="4"
             />
             <button class="btn btn-outline-light btn-sm login__btn">
               <i class="bi bi-box-arrow-in-right text-dark h4"></i>
@@ -42,7 +47,7 @@
       </nav>
     </header>
     <main class="app mt-5">
-      <div class="container ">
+      <div class="container d-none box_data">
         <div class="row g-4">
           <div class="col-12">
             <div class="d-flex justify-content-between align-items-center">
