--- a/index.html
+++ b/index.html
@@ -103,16 +103,16 @@
                   <p class="fw-bold fs-4 mb-3">Transfer money</p>
                   <form class="d-flex gap-2">
                     <input
-                      class="form-control fw-bold bg-warning-subtle"
+                      class="form-control fw-bold bg-warning-subtle input_transfer"
                       type="text"
                       placeholder="Transfer to"
                     />
                     <input
-                      class="form-control fw-bold bg-warning-subtle"
+                      class="form-control fw-bold bg-warning-subtle input_amount"
                       type="number"
                       placeholder="Amount"
                     />
-                    <button class="btn btn-warning p-1">
+                    <button class="btn btn-warning p-1 btn_transfer">
                       <i class="bi bi-arrow-right-circle h4"></i>
                     </button>
                   </form>
@@ -135,19 +135,19 @@
               </div>
               <div class="col-12">
                 <div class="p-5 bg-danger rounded-5">
-                  <p class="fw-bold fs-4 mb-3">Close account</p>
+                  <p class="fw-bold fs-4 mb-3">Delete account</p>
                   <form class="d-flex gap-2">
                     <input
-                      class="form-control fw-bold bg-danger-subtle"
+                      class="form-control fw-bold bg-danger-subtle input_delete_user"
                       type="text"
                       placeholder="Confirm user"
                     />
                     <input
-                      class="form-control fw-bold bg-danger-subtle"
+                      class="form-control fw-bold bg-danger-subtle input_delete_pass"
                       type="number"
                       placeholder="Confirm PIN"
                     />
-                    <button class="btn btn-danger p-1">
+                    <button class="btn btn-danger p-1 btn_delete">
                       <i class="bi bi-arrow-right-circle h4 text-dark"></i>
                     </button>
                   </form>
