--- a/index.html
+++ b/index.html
@@ -123,11 +123,11 @@
                   <p class="fw-bold fs-4 mb-3">Request loan</p>
                   <form class="d-flex gap-2">
                     <input
-                      class="form-control fw-bold bg-success-subtle"
+                      class="form-control fw-bold bg-success-subtle input_request"
                       type="number"
                       placeholder="Amount"
                     />
-                    <button class="btn btn-success p-1">
+                    <button class="btn btn-success p-1 btn_request">
                       <i class="bi bi-arrow-right-circle h4 text-dark"></i>
                     </button>
                   </form>
@@ -174,7 +174,7 @@
                     <p>INTEREST <span class="text-success fs-3 sumINTEREST">0000€</span></p>
                   </div>
                   <div class="col-sm-3 col-6">
-                    <button class="btn btn-light fw-bold shadow-sm">
+                    <button class="btn btn-light fw-bold shadow-sm btn_sort">
                       SORT<i class="bi bi-arrow-down-up"></i>
                     </button>
                   </div>
