--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               <div class="">
                 <p class="fs-3 fw-bold">Current balance</p>
                 <p class="fw-bolder text-secondary">
-                  AS of <span>25/03/2024</span>
+                  AS of <span class="label_date">25/03/2024</span>
                 </p>
               </div>
               <p class="fw-bold fs-1 balance">0000€</p>
@@ -184,7 +184,7 @@
                 <div class="fw-bold text-secondary text-center">
                   <p>
                     You will be logged out in
-                    <span class="text-dark fs-5">05:00</span>
+                    <span class="text-dark fs-5 timer">05:00</span>
                   </p>
                 </div>
               </div>
