--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="icon/bootstrap-icons.min.css" />
     <link rel="icon" type="image/png" href="image/bootstrap-logo.png" />
-    <meta name="description" content="" />
+    <meta name="description" content="Front-end Developer MR Nadirkhanloo " />
   </head>
   <body class="overflow-x-hidden">
     <header>
