--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bankist</title>
+    <title>Internet bank</title>
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="icon/bootstrap-icons.min.css" />
@@ -241,7 +241,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <h1 class="modal-title fs-5 fw-bold" id="exampleModalLabel">
-              Bankist Help...
+              Internet bank Help...
             </h1>
             <button
               type="button"
