--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <h1 class="modal-title fs-5 fw-bold" id="exampleModalLabel">
-              Internet bank Help...
+              Internet Bank Help...
             </h1>
             <button
               type="button"
