--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
           ></a>
         </li>
         <li class="ms-3">
-          <a class="text-body-secondary" href="https://github.com/mrkhanloo"
+          <a class="text-body-secondary" href="https://github.com/MohammadrezaNadirkhanloo"
             ><i class="bi bi-github"></i
           ></a>
         </li>
