--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Internet bank</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="icon/bootstrap-icons.min.css" />
-    <link rel="icon" type="image/png" href="image/bootstrap-logo.png" />
+    <link rel="stylesheet" href="./css/bootstrap.min.css" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./icon/bootstrap-icons.min.css" />
+    <link rel="icon" type="image/png" href="./image/bootstrap-logo.png" />
     <meta name="description" content="Front-end Developer MR Nadirkhanloo " />
   </head>
   <body class="overflow-x-hidden">
@@ -206,7 +206,9 @@
           ></a>
         </li>
         <li class="ms-3">
-          <a class="text-body-secondary" href="https://github.com/MohammadrezaNadirkhanloo"
+          <a
+            class="text-body-secondary"
+            href="https://github.com/MohammadrezaNadirkhanloo"
             ><i class="bi bi-github"></i
           ></a>
         </li>
@@ -294,7 +296,7 @@
         </div>
       </div>
     </div>
-    <script src="js/script.js"></script>
-    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="./js/script.js"></script>
+    <script src="./js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
